dnl GMAN Configure Script 
dnl Process this file with autoconf to produce a configure script.
dnl
dnl  Copyright (C) 1999, John Cairns and Free Software Foundation, Inc.
dnl
dnl  This file is part of GMAN
dnl
dnl  GMAN is free software; you can redistribute it and/or modify it
dnl  under the terms of the GNU Lesser General Public License as published by
dnl  the Free Software Foundation; either version 2.1, or (at your
dnl  option) any later version.
dnl
dnl  GMAN is distributed in the hope that it will be useful, but
dnl  WITHOUT ANY WARRANTY; without even the implied warranty of
dnl  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl  General Public License for more details.
dnl
dnl  You should have received a copy of the GNU Lesser General Public License
dnl  along with GMAN; see the file COPYING.  If not, write to the
dnl  Free Software Foundation, Inc., 59 Temple Place - Suite 330,
dnl  Boston, MA 02111-1307, USA.

dnl Process this file with autoconf to produce a configure script.
AC_INIT(README)

dnl AutoMake it...
AM_INIT_AUTOMAKE(gman, 0.5.0)
GMAN_SO_VERSION=1:0:0
AC_SUBST(GMAN_SO_VERSION)
AM_PROG_LIBTOOL

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
dnl Checks for lex and yacc
AM_PROG_LEX
AC_PROG_YACC

dnl Checks for libraries.

AC_CHECK_LIB(pthread, pthread_mutex_init)
AC_CHECK_LIB(jpeg, jpeg_set_quality)
AC_CHECK_LIB(png, png_write_image)
AC_CHECK_LIB(tiff, TIFFOpen)
AC_CHECK_LIB(pnm, ppm_init, [AC_DEFINE(HAVE_LIBPNM) LIBS="$LIBS -lpnm -lppm -lpbm -lpgm"], , -lppm -lpbm -lpgm)
AC_CHECK_LIB(dl, dlerror)
AC_CHECK_LIB(m,sqrt)
AC_CHECK_LIB(stdc++,cerr)

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for "std" namespace
AC_LANG(C++)
AC_MSG_CHECKING([for support for C++ "std" namespace])
AC_TRY_COMPILE(
#include <string>
,
	[std::string s;],
	AC_DEFINE_UNQUOTED(HAVE_STD_NAMESPACE)
	AC_MSG_RESULT(yes),
	AC_MSG_RESULT(no))

dnl Checks for library functions.

AC_OUTPUT(include/Makefile tests/Makefile gman/Makefile libgman/Makefile Makefile renderers/Makefile renderers/radiosity/Makefile renderers/raytracer/Makefile renderers/zbuffer/Makefile renderers/reyes/Makefile gmansl/Makefile libgmanrib/Makefile shaders/Makefile)

