## Process this file with automake to produce Makefile.in.
##
##  	Copyright (C) 1998 Free Software Foundation, Inc.
##
##   This file is part of GMAN.
##   
##   GMAN is free software; you can redistribute it and/or modify
##   it under the terms of the GNU Lesser General Public License as
##   published by the Free Software Foundation; either version 2.1, or
##   (at your option) any later version.
##   
##   GMAN is distributed in the hope that it will be useful, but
##   WITHOUT ANY WARRANTY; without even the implied warranty of
##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##   GNU Lesser General Public License for more details.
##   
##   You should have received a copy of the GNU Lesser General Public
##   License along with GMAN; see the file COPYING.  If not, write
##   to the Free Software Foundation, Inc., 59 Temple Place, Suite
##   330, Boston, MA 02111-1307 USA

AUTOMAKE_OPTIONS = foreign
include_HEADERS = \
	gmanattributes.h \
	gmanbasis.h \
	gmanbbox.h \
	gmanbitmap.h \
	gmanbody.h \
	gmanclipedge.h \
	gmancolor.h \
	gmancolorsamples.h \
	gmancontext.h \
	gmandefaults.h \
	gmandictionary.h \
	gmandisplacementshader.h \
	gmanerror.h \
	gmanface.h \
	gmanframebuffer.h \
	gmangamma.h \
	gmangetarguments.h \
	gmangraphicstate.h \
	gmanhpoint.h \
	gmanguard.h \
	gmanimagershader.h \
	gmaninlineparse.h \
	gmanisoa.h \
	gmanlightsourcemgr.h \
	gmanlightsourceshader.h \
	gmanlinearworldmanager.h \
	gmanloadable.h \
	gmanloadablerenderer.h \
	gmanloadableshader.h \
	gmanlog.h \
	gmanmath.h \
	gmanmatrix4.h \
	gmanmutex.h \
	gmannoise.h \
	gmannormal.h \
	gmanobject.h \
	gmanobjectmanager.h \
	gmanoctreeworldmanager.h \
	gmanoptions.h \
	gmanoutput.h \
	gmanoutputjpeg.h \
	gmanoutputpnm.h \
	gmanoutputpng.h \
	gmanoutputpolygon.h \
	gmanoutputwin32.h \
	gmanoutputx11.h \
	gmanparameterlist.h \
	gmanpatchpolyobjectmanager.h \
	gmanpoint.h \
	gmanpolygon.h \
	gmanpolygonclipper.h \
	gmanprimitive.h \
	gmanprimitives.h \
	gmanquantize.h \
	gmanrenderer.h \
	gmanrenderman.h \
	gmanribparse.h \
	gmanribtokenize.h \
	gmansegment.h \
	gmanshader.h \
	gmanshaderenvironment.h \
	gmanslapi.h \
	gmansolidobject.h \
	gmansurface.h \
	gmansurfaceshader.h \
	gmanthread.h \
	gmantools.h \
	gmantransform.h \
	gmantrimcurve.h \
	gmantypes.h \
	gmanvector.h \
	gmanvector4.h \
	gmanvertex.h \
	gmanvertex4.h \
	gmanviewingsystem.h \
	gmanvolumeshader.h \
	gmanvsorthographic.h \
	gmanvsperspective.h \
	gmanwindowoutput.h \
	gmanworldmanager.h \
	ri.h \
	universalsuperclass.h
