## Process this file with automake to produce Makefile.in.
##
##  	Copyright (C) 1998 Free Software Foundation, Inc.
##
##   This file is part of GMAN.
##   
##   GMAN is free software; you can redistribute it and/or modify
##   it under the terms of the GNU Lesser General Public License as
##   published by the Free Software Foundation; either version 2.1, or
##   (at your option) any later version.
##   
##   GMAN is distributed in the hope that it will be useful, but
##   WITHOUT ANY WARRANTY; without even the implied warranty of
##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##   GNU Lesser General Public License for more details.
##   
##   You should have received a copy of the GNU Lesser General Public
##   License along with GMAN; see the file COPYING.  If not, write
##   to the Free Software Foundation, Inc., 59 Temple Place, Suite
##   330, Boston, MA 02111-1307 USA

AUTOMAKE_OPTIONS = foreign

INCLUDES = -I../include -I/usr/X11R6/include

lib_LTLIBRARIES =  libgman.la

libgman_la_LDFLAGS= -version-info @GMAN_SO_VERSION@ -no-undefined

libgman_la_SOURCES = \
	gmanattributes.cpp \
	gmanbasis.cpp \
	gmanbbox.cpp \
	gmanbitmap.cpp \
	gmanbody.cpp \
	gmancapi.cpp \
	gmanclipedge.cpp \
	gmancolor.cpp \
	gmancolorsamples.cpp \
	gmancontext.cpp \
	gmandefaults.cpp \
	gmandictionary.cpp \
	gmandisplacementshader.cpp \
	gmanerror.cpp \
	gmanface.cpp \
	gmanfilters.cpp \
	gmanframebuffer.cpp \
	gmangamma.cpp \
	gmangetarguments.cpp \
	gmangraphicstate.cpp \
	gmanguard.cpp \
	gmanhpoint.cpp \
	gmanimagershader.cpp \
	gmaninlineparse.cpp \
	gmanisoa.cpp \
	gmanlightsourcemgr.cpp \
	gmanlightsourceshader.cpp \
	gmanlinearworldmanager.cpp \
	gmanloadable.cpp \
	gmanloadablerenderer.cpp \
	gmanloadableshader.cpp \
	gmanlog.cpp \
	gmanmatrix4.cpp \
	gmanmutex.cpp \
	gmannoise.cpp \
	gmannormal.cpp \
	gmanobject.cpp \
	gmanobjectmanager.cpp \
	gmanoctreeworldmanager.cpp \
	gmanoptions.cpp \
	gmanoutput.cpp \
	gmanoutputjpeg.cpp \
	gmanoutputpng.cpp \
	gmanoutputpnm.cpp \
	gmanoutputpolygon.cpp \
	gmanoutputtiff.cpp \
	gmanoutputwin32.cpp \
	gmanoutputx11.cpp \
	gmanparameterlist.cpp \
	gmanpatchpolyobjectmanager.cpp \
	gmanpoint.cpp \
	gmanpolygon.cpp \
	gmanpolygonclipper.cpp \
	gmanprimitive.cpp \
	gmanprimitives.cpp \
	gmanquantize.cpp \
	gmanrenderer.cpp \
	gmanrenderman.cpp \
	gmanribparse.cpp \
	gmanribtokenize.cpp \
	gmansegment.cpp \
	gmanshader.cpp \
	gmanslapi.cpp \
	gmansolidobject.cpp \
	gmansurfaceshader.cpp \
	gmanthread.cpp \
	gmantoken.cpp \
	gmantools.cpp \
	gmantransform.cpp \
	gmantrimcurve.cpp \
	gmanvector.cpp \
	gmanvector4.cpp \
	gmanvertex.cpp \
	gmanvertex4.cpp \
	gmanviewingsystem.cpp \
	gmanvolumeshader.cpp \
	gmanvsorthographic.cpp \
	gmanvsperspective.cpp \
	gmanwindowoutput.cpp \
	gmanworldmanager.cpp \
	universalsuperclass.cpp
